--- a/matchmaker-app/index.html
+++ b/matchmaker-app/index.html
@@ -5,6 +5,10 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="./shs-favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet">
     <!-- Page Title -->
     <title>Sequoia Humane Society</title>
   </head>
